# OCRTOC_software_package

./: .gitignore  .gitmodules  CHANGELOG.md  FAQ.md  README.md
docker/: Dockerfile  build.sh  (+3 more)
ocrtoc_common/: CMakeLists.txt  README.md  package.xml  setup.py
ocrtoc_common/launch/: manipulater_interface.launch
ocrtoc_common/scripts/: manipulator_interface_node.py
ocrtoc_common/src/ocrtoc_common/: camera_interface.py  gripper_interface.py  manipulator_interface.py  transform_interface.py
ocrtoc_common/srv/: JointSpaceGoal.srv  ManipulatorInfo.srv  ManipulatorState.srv  PoseGoal.srv
ocrtoc_common/test/: test_camera_interface.py  test_gripper_interface.py  test_manipulator_interface.py  test_transform_interface.py
ocrtoc_materials/: CMakeLists.txt  package.xml
ocrtoc_materials/models/: models.yaml
ocrtoc_materials/scenes/: 0-0.world  0-0.yaml  0-1.world  0-1.yaml  0-2.world  0-2.yaml  0-3.yaml  0-4.world  0-4.yaml  0-5.world  0-5.yaml  1-1-1.world  1-1-1.yaml  1-1-2.world  1-1-2.yaml  1-1-3.world  1-1-3.yaml  1-2-1.world  1-2-1.yaml  1-2-2.world  1-2-2.yaml  1-3-1.world  1-3-1.yaml  1-4-1.world  1-4-1.yaml  1-4-2.world  1-4-2.yaml  1-5-1.world  1-5-1.yaml  1-5-2.world  1-5-2.yaml  1-5-3.world  1-5-3.yaml  2-1-1.world  2-1-1.yaml  2-1-2.world  2-1-2.yaml  2-2-1.world  2-2-1.yaml  2-2-2.world  (+69 more)
ocrtoc_materials/targets/: 0-0.world  0-0.yaml  0-1.yaml  0-2.world  0-2.yaml  0-3.world  0-3.yaml  0-4.yaml  0-5.yaml  1-1-1.world  1-1-1.yaml  1-1-2.world  1-1-2.yaml  1-1-3.world  1-1-3.yaml  1-2-1.world  1-2-1.yaml  1-2-2.world  1-2-2.yaml  1-3-1.world  1-3-1.yaml  1-4-1.world  1-4-1.yaml  1-4-2.world  1-4-2.yaml  1-5-1.world  1-5-1.yaml  1-5-2.world  1-5-2.yaml  1-5-3.world  1-5-3.yaml  2-1-1.world  2-1-1.yaml  2-1-2.world  2-1-2.yaml  2-2-1.world  2-2-1.yaml  2-2-2.world  2-2-2.yaml  2-2-3.world  (+67 more)
ocrtoc_msg/: CMakeLists.txt  package.xml
ocrtoc_msg/action/: Organization.action
ocrtoc_msg/msg/: PerceptionResult.msg
ocrtoc_msg/srv/: PerceptionTarget.srv
ocrtoc_perception/: CMakeLists.txt  package.xml  perception.md  setup.py
ocrtoc_perception/config/: arm_poses_Franka_realsense.csv  perception_franka_in_real.yaml
ocrtoc_perception/launch/: fake_perception.launch  perception_solution.launch
ocrtoc_perception/scripts/: fake_perception.py  perception_entrance.py  perception_server.py
ocrtoc_perception/src/ocrtoc_perception/: __init__.py  arm_controller.py  perceptor.py
ocrtoc_perception/src/ocrtoc_perception/graspnet/: graspnet_baseline.py
ocrtoc_perception/src/ocrtoc_perception/graspnet/models/: backbone.py  graspnet.py  modules.py
ocrtoc_perception/src/ocrtoc_perception/pose/: bbox_generation.py  bbox_vis.py  pose_6d.py  pose_correspondence.py  utils.py
ocrtoc_perception/src/ocrtoc_perception/pose/SuperGluePretrainedNetwork/: demo_superglue.py  match_pairs.py  match_pairs.sh
ocrtoc_perception/src/ocrtoc_perception/pose/bop_toolkit_lib/: dataset_params.py  inout.py  renderer_cpp.py  renderer_py.py  score.py  view_sampler.py  visualization.py
ocrtoc_perception/test/: perception_target_client.py
ocrtoc_planning/: CMakeLists.txt  package.xml
ocrtoc_planning/config/: motion_planner_parameter.yaml  task_planner_parameter.yaml
ocrtoc_planning/launch/: planning_solution.launch
ocrtoc_planning/scripts/: domain.pddl  motion_planning.py  primitives.py  solution_entrance.py  stream.pddl  task_planning.py  viewer.py
ocrtoc_task/: .gitignore  CMakeLists.txt  package.xml
ocrtoc_task/config/extrinsic/: kinect.yaml  realsense.yaml
ocrtoc_task/config/meshes/: finger.dae
ocrtoc_task/config/urdf/: hand.xacro  panda_arm_hand.urdf.xacro
ocrtoc_task/launch/: bringup_real_devices.launch  bringup_simulator_pybullet.launch  bringup_simulator_sapien.launch  calculate_score_from_dump_pose.launch  dump_6dpose_simulator.launch  ocrtoc_franka.launch  ocrtoc_kinect.launch  ocrtoc_realsense.launch  solution.launch  timed_roslaunch.sh  trigger.launch  trigger_and_evaluation.launch
ocrtoc_task/scripts/: calculate_score_from_dump_pose.py  calculate_score_from_dump_pose_new.py  get_6dpose_dump_simulator.py  grasp_detection.py  hash_rotation_matrix.py  iou.py  task_evaluation.py  trigger.py
pybullet_simulator/: CMakeLists.txt  README.md  package.xml
pybullet_simulator/config/: default_controllers.yaml
pybullet_simulator/launch/: bringup_pybullet.launch  controllers.launch  panda_controllers.launch  panda_upload.launch  ros_interface.launch
pybullet_simulator/robots/franka/config/: generate_panda_config.py  panda_arm_hand.yaml
pybullet_simulator/robots/franka/urdf/: display_hand.py  display_panda_arm.py  display_panda_arm_hand.py  display_panda_arm_hand_realsense.py  generate_urdf.py  hand.urdf  hand.xacro  panda_arm.urdf  panda_arm_hand.urdf  panda_arm_hand.urdf.xacro  panda_arm_hand_realsense.urdf  panda_arm_hand_realsense_ros.urdf
pybullet_simulator/robots/kinect/: kinect.urdf  view_kinect.py
pybullet_simulator/robots/realsense/: realsense_d435i.urdf  view_realsense.py
pybullet_simulator/robots/realsense/meshes/: convert.bash
pybullet_simulator/scripts/: load_env_ros.py  pybullet_env.py  ros_interface.py
pybullet_simulator/scripts/utils/: arm_control_action_server.py  gripper_control_action_server.py  load_kinect.py  load_robot.py  load_scene.py  move_robot.py  transformations.py
sapien_simulator/: CMakeLists.txt  README.md  package.xml
sapien_simulator/config/panda/: arm_controller.yaml  gripper_controller.yaml  joint_limits.yaml  joint_state_controller.yaml  panda.srdf
sapien_simulator/config/xarm7/: arm_controller.yaml  gripper_controller.yaml  joint_limits.yaml  xarm7.srdf
sapien_simulator/launch/: bringup_sapien.launch  camera_info_pub.launch  panda_controllers.launch  panda_upload.launch  xarm7_controllers.launch  xarm7_upload.launch
sapien_simulator/meshes/visual/: finger.dae
sapien_simulator/scripts/: asset_utils.py  camera_info_pub.py  robot_const.py  sapien_env.py  viz_urdf.py
sapien_simulator/scripts/sapien_utils/: inertia_utils.py  process_utils.py
sapien_simulator/urdf/: panda.urdf  xarm7.urdf  xarm7_ros_free.urdf
(+65 files in other folders)
