<?xml version="1.0"?>
<package format="2">
  <name>ocrtoc_materials</name>
  <version>0.0.0</version>
  <description>The ocrtoc_materials package</description>

  <maintainer email="info@ocrtoc.org">robot</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
