<?xml version="1.0"?>
<package format="2">
  <name>sapien_simulator</name>
  <version>0.0.0</version>
  <description>The sapien_simulator package</description>

  <maintainer email="info@ocrtoc.org">robot</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
